methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:3: error: value lightgray is not a member of object java.awt.Color
  setCouleurBrosse(Color.lightgray)
                         ^